--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ mybatis.type-aliases-package=com.he.boot.entity
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.freemarker.prefix=/
